# catsolle

./: .gitignore  Cargo.toml  Cross.toml  README.md
.github/workflows/: ci.yml
crates/catsolle/: Cargo.toml
crates/catsolle-cli/: Cargo.toml
crates/catsolle-cli/src/: lib.rs
crates/catsolle-config/: Cargo.toml
crates/catsolle-config/i18n/en/: catsolle_config.ftl
crates/catsolle-config/i18n/ru/: catsolle_config.ftl
crates/catsolle-config/src/: i18n.rs  lib.rs  paths.rs  settings.rs
crates/catsolle-core/: Cargo.toml
crates/catsolle-core/src/: connection.rs  error.rs  events.rs  lib.rs  recording.rs  session.rs  transfer.rs
crates/catsolle-keychain/: Cargo.toml
crates/catsolle-keychain/src/: agent.rs  keys.rs  lib.rs  store.rs
crates/catsolle-ssh/: Cargo.toml
crates/catsolle-ssh/src/: client.rs  config.rs  known_hosts.rs  lib.rs  proxy.rs  sftp.rs
crates/catsolle-tui/: Cargo.toml
crates/catsolle-tui/src/: lib.rs
crates/catsolle/src/: main.rs
