[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MPL-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
directories = "5"
regex = "1"
fuzzy-matcher = "0.3"
clap = { version = "4", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.27"
vt100 = "0.15"
russh = { version = "0.56", default-features = false, features = ["flate2", "rsa", "ring"] }
russh-sftp = "2.1"
russh-config = "0.56"
ssh-key = { version = "0.7.0-rc.6", features = ["encryption", "ed25519", "rsa", "ecdsa", "serde"] }
keyring = "2"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
bytes = "1"
async-trait = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
zeroize = "1"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
rand_core = "0.10.0-rc-3"
getrandom = "0.2"
parking_lot = "0.12"
tokio-util = "0.7"
hmac = "0.12"
sha1 = "0.10"
whoami = "1"
walkdir = "2"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "stream"] }

# i18n
rust-embed = "8"
unic-langid = "0.9"
i18n-embed = { version = "0.15", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.8"
fluent-bundle = "0.15"

# terminal recording
serde_repr = "0.1"
