[package]
name = "catsolle-core"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
directories = { workspace = true }
regex = { workspace = true }
fuzzy-matcher = { workspace = true }
rusqlite = { workspace = true }
parking_lot = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
russh-config = { workspace = true }
whoami = { workspace = true }
walkdir = { workspace = true }

catsolle-config = { path = "../catsolle-config" }
catsolle-ssh = { path = "../catsolle-ssh" }
catsolle-keychain = { path = "../catsolle-keychain" }

[dev-dependencies]
tempfile = "3"
