[package]
name = "catsolle-keychain"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
keyring = { workspace = true }
ssh-key = { workspace = true }
russh = { workspace = true }
tokio = { workspace = true }
zeroize = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
getrandom = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = "3"
