[package]
name = "catsolle-ssh"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
russh = { workspace = true }
russh-sftp = { workspace = true }
ssh-key = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
getrandom = { workspace = true }
tokio-util = { workspace = true }
hmac = { workspace = true }
sha1 = { workspace = true }
