[package]
name = "catsolle-tui"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
vt100 = { workspace = true }
unicode-width = "0.1"
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio-util = { workspace = true }
walkdir = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
fluent-bundle = { workspace = true }
whoami = { workspace = true }
zeroize = { workspace = true }

catsolle-core = { path = "../catsolle-core" }
catsolle-ssh = { path = "../catsolle-ssh" }
catsolle-config = { path = "../catsolle-config" }
